# Chartroomcc

./: README.md
Client/: CMakeCache.txt  CMakeLists.txt  Makefile  client  cmake_install.cmake
Client/include/: threcv_cli.h  util_cli.h
Client/src/: client.c  threcv_cli.c  util_cli.c
Server/: CMakeCache.txt  CMakeLists.txt  Makefile  chat001.db  cmake_install.cmake  server
Server/include/: dbutil.h  list.h  threcv_ser.h  util_ser.h
Server/src/: dbutil.c  list.c  server.c  threcv_ser.c  util_ser.c
